--- a/css/aboutstyle.css
+++ b/css/aboutstyle.css
@@ -2,3 +2,22 @@
     
     height: auto;
 }
+.all--text{
+    margin-left: 20%;
+    margin-right: 5%;
+
+    width: 60%;
+    border: 1px solid white;
+    padding: 10px;
+}
+
+
+.ul--text{
+    color: grey;
+    text-rendering: optimizeLegibility;
+    line-height: 1.4;
+    font-size: 110%
+    
+
+   
+}
