--- a/css/aboutstyle.css
+++ b/css/aboutstyle.css
@@ -54,3 +54,36 @@
 
 
 
+#__intro {
+    width: 100%;
+    height: 680px;
+    background-image: url(https://images.prismic.io/woltwide/5760b8f9-5432-4d3b-88be-15dc8fbfc87c_Wolt+One+team+pic+Sept+2019+%E2%80%93+high+resolution.jpg?auto=compress,format);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+
+.__intro__overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #0000008c;
+}
+
+.__intro__text {
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.__intro__text h1 {
+    color: white;
+    z-index: 100;
+    font-size: 3.75rem;
+    font-family: WoltHeading-Omnes, system-ui, -apple-system, BlinkMacSystemFont, Roboto, "Open Sans", sans-serif;
+    font-weight: 900;
+}
+
+
