--- a/css/aboutstyle.css
+++ b/css/aboutstyle.css
@@ -1,3 +1,4 @@
+/* middle card end */
 .middle-card-end{
     margin: 50px 150px;
     display: flex;
@@ -37,4 +38,34 @@
     cursor: pointer;
     text-decoration: none;
     padding-top: 6px;
+}
+
+/* page end question */
+.page-end-question{
+    text-align: center;
+    padding-top: 80px;
+    padding-bottom: 156px;
+    margin:110px auto 0;
+}
+.page-end-question-title>h3{
+    margin-left: auto;
+    margin-right: auto;
+    width: 900px;
+    font-size: 45px;
+    line-height: 50px;
+    font-weight:900;
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, Roboto, "Open Sans", sans-serif;
+}
+.page-end-question-unde-button{
+    background-color: #009de0;
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
+    padding: 15px 20px;
+    font-weight: 700;
+    font-size: 20px;
+    border-radius: 8px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, Roboto, "Open Sans", sans-serif;
+
 }
