--- a/css/aboutstyle.css
+++ b/css/aboutstyle.css
@@ -67,5 +67,75 @@
     font-size: 20px;
     border-radius: 8px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, Roboto, "Open Sans", sans-serif;
+}
 
+/* body */
+body{
+    margin:0px;
+}
+
+/* footer */
+.footer{
+    background-color: rgb(20, 20, 20);
+    padding: 104px 30px 30px;
+    display: block;
+}
+.footer-box{
+    width: 1400px;
+    display: flex;
+    margin: auto;
+    justify-content: center;
+}
+.footer-box-up{
+    display: flex;
+    width: 1100px;
+    justify-content:space-between;
+
+}
+.footer-box-up-left{
+    display: flex;
+    flex-direction: column;
+}
+.Footer__StyledWoltLogo-sc-1ki6z7e-12{
+    fill: rgb(255, 255, 255) !important;
+    width: 80px;
+}
+.footer-box-up-left-applinks{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+.footer-box-up-left-applinks-appstore{
+    border-radius: 3px;
+    margin-top: 30px;
+}
+.footer-box-up-left-applinks-googleplay{
+    margin-top: 15px;
+    border-radius: 3px;
+}
+.footer-box-up-left-applinks-googleplay-img{
+    height: 40px;
+}
+.footer-box-up-right{
+    display: flex;
+    justify-content: end;
+}
+.footer-box-up-right-nav{
+    color: rgba(255, 255, 255, 0.72);
+    margin-left: 40px;
+    margin-right: 40px;
+    line-height: 30px;
+    font-family: system-ui,-apple-system,BlinkMacSystemFont,Roboto,Open Sans,sans-serif;
+}
+.footer-box-up-right-nav-label{
+    color: rgb(255, 255, 255);
+    font-weight: 200;
+}
+.footer-box-up-right-nav-linkgroup ul{
+    list-style-type: none;
+    padding-left: 0px;
+}
+.footer-box-up-right-nav-linkgroup-link{
+    color: rgb(255, 255, 255);
+    text-decoration: none;
 }
