--- a/css/aboutstyle.css
+++ b/css/aboutstyle.css
@@ -44,13 +44,12 @@
     color: black;
     text-decoration: none;
     margin-right: 40px;
-    transition: all 1s;
     font-family: WoltHeading-Omnes, system-ui, -apple-system, BlinkMacSystemFont, Roboto, "Open Sans", sans-serif;
+    font-size: 14px;
 }
 
 .nav__item__link a:hover {
     text-decoration: underline;
-    transition: all 1s;
 }
 
 
@@ -98,3 +97,74 @@
 }
 
 
+
+
+.main__information{
+    margin-top: 150px;
+}
+
+.main__information__top {
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.main__information__top__text{
+    width: 43%;
+    height: 600px;
+    
+}
+
+.main__information__top__text p{
+    font-size: 1.125rem;
+    color: #616060;
+    font-family: WoltHeading-Omnes, system-ui, -apple-system, BlinkMacSystemFont, Roboto, "Open Sans", sans-serif;
+}
+
+.main__information__top__text h3{
+    font-family: WoltHeading-Omnes, system-ui, -apple-system, BlinkMacSystemFont, Roboto, "Open Sans", sans-serif;
+}
+
+.main__information__top__img{
+    width: 49%;
+}
+
+.main__information__top__img img{
+    width: 100%;
+    height: 80%;
+}
+
+
+
+
+.main__information__bottom{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+
+.main__information__bottom__text{
+    width: 43%;
+    height: 600px;
+}
+
+.main__information__bottom__text p{
+    font-size: 1.125rem;
+    color: #616060;
+    font-family: WoltHeading-Omnes, system-ui, -apple-system, BlinkMacSystemFont, Roboto, "Open Sans", sans-serif;
+}
+
+
+.main__information__bottom__text h3{
+    font-family: WoltHeading-Omnes, system-ui, -apple-system, BlinkMacSystemFont, Roboto, "Open Sans", sans-serif;
+}
+
+.main__information__bottom__img{
+    width: 49%;
+}
+
+
+.main__information__bottom__img img{
+    width: 100%;
+    height: 60%;
+}
