--- a/css/aboutstyle.css
+++ b/css/aboutstyle.css
@@ -31,3 +31,23 @@
     color: #009de0;
     text-decoration: none;
 }
+
+/*LI LER*/
+.topcard_text_ul {
+    margin-left: 20px;
+    padding: 0;
+
+}
+
+.topcard_text_ul>.topcard_text_ul_li {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-right: 10px;
+    width: 92%;
+    font-size: 16px;
+    color: #616060;
+    padding: 0px;
+}
+
+.topcard_text_ul_li_str {
+    font-weight: 500;
+}
