--- a/css/aboutstyle.css
+++ b/css/aboutstyle.css
@@ -51,3 +51,17 @@
 .topcard_text_ul_li_str {
     font-weight: 500;
 }
+
+
+
+
+/* SAGDAKILAR*/
+
+.topcard_right_img {
+    width: 50%;
+}
+
+.topcard_right_img_item {
+    margin-top: 130px;
+    margin-left: 58px;
+}
