--- a/css/aboutstyle.css
+++ b/css/aboutstyle.css
@@ -79,3 +79,16 @@
     margin-top: 20px;
     margin-left: 80px;
 }
+
+.middle_text {
+
+    width: 52%;
+}
+
+.middle_text_p {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px;
+    margin-left: 90px;
+    width: 72%;
+    color: #616060;
+}
