--- a/css/aboutstyle.css
+++ b/css/aboutstyle.css
@@ -92,3 +92,12 @@
     width: 72%;
     color: #616060;
 }
+
+.middle_text_ul>.middle_text_ul_li {
+    width: 73%;
+    margin-left: 68px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 16px;
+    padding: 0;
+    color: #616060;
+}
