--- a/css/aboutstyle.css
+++ b/css/aboutstyle.css
@@ -105,3 +105,30 @@
 .middle_text_ul_li>.middle_text_ul_li_str {
     font-weight: 500;
 }
+
+/* BOTTOM */
+.bottom {
+    display: flex;
+}
+
+
+.bottom_text {
+    width: 57%;
+}
+
+
+.bottom_text_h3 {
+    margin-top: 80px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px;
+    width: 70%;
+    margin-left: 90px;
+}
+
+.bottom_text_p {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #616060;
+    font-size: 18px;
+    width: 70%;
+    margin-left: 90px;
+}
