--- a/css/aboutstyle.css
+++ b/css/aboutstyle.css
@@ -132,3 +132,20 @@
     width: 70%;
     margin-left: 90px;
 }
+
+
+
+.bottom_text_ul>.bottom_text_ul_li {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 16px;
+    color: #616060;
+    padding: 0;
+    width: 72%;
+    margin-left: 70px;
+
+
+}
+
+.bottom_text_ul_li>.bottom_text_ul_li_str {
+    font-weight: 500;
+}
