--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -1,1 +1,60 @@
- 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+.__container {
+    width: 1200px;
+    margin: auto;
+}
+
+#__header {
+    width: 100%;
+    background-color: #fff;
+    height: 70px;
+}
+
+.__nav {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.__nav img {
+    width: 120px;
+    height: 68px;
+}
+
+
+.nav__item__login a{
+    margin-right: 3rem;
+    margin-left: 1rem;
+    padding: 13px 16px;
+    border-radius: 0.5rem;
+    text-decoration: none;
+    color: #fff;
+    background-color: rgb(0, 157, 224);
+    transition: all 0.3s;
+}
+
+.nav__item__login a:hover{
+    background-color: rgb(2, 167, 238);
+    transition: all 0.3s;
+}
+
+.nav__item__login{
+    font-family: WoltHeading-Omnes, system-ui, -apple-system, BlinkMacSystemFont, Roboto, "Open Sans", sans-serif;
+    font-weight: bold;
+}
+
+.nav__item__login span{
+    font-size: 0.9rem;
+    font-weight: 500;
+    color:rgb(32, 33, 37);
+}
+
+
