--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -21,11 +21,10 @@
 }
 .get-wolt-module-container-right{
     position: absolute;
-    right: -500px;
+    right: -50px;
     top: 0;
     height: 100%;
-    width: 100%;
-    min-width: 1100px;
+    width: 900px;
     overflow: hidden;
     transition: opacity .15s ease;
 }
