--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -1,1 +1,38 @@
- 
+ .middlecontent_content {
+
+     width: 86%;
+     margin-left: 80px;
+     display: flex;
+ }
+
+ .middlecontent_content_delivered {
+     width: 35%;
+ }
+
+ .middlecontent_content_delivered_h3 {
+     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+     font-weight: 600;
+     margin-left: 100px;
+     padding-top: 120px;
+
+ }
+
+ .middlecontent_content_delivered_h2 {
+     font-family: WoltHeading-Omnes, system-ui, -apple-system, BlinkMacSystemFont, Roboto, "Open Sans", sans-serif;
+     font-weight: 800;
+     padding-top: 45px;
+     font-size: 46px;
+     -webkit-font-smoothing: antialiased;
+     font-feature-settings: "kern", "ss01", "ss05", "ss07";
+     margin-left: 100px;
+
+ }
+
+
+
+ .middlecontent_content_delivered_p {
+     margin-left: 100px;
+     width: 94%;
+     color: #616060;
+     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ }
