--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -36,3 +36,43 @@
      color: #616060;
      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  }
+
+
+
+
+
+ .middlecontent_content_delivered_text {
+     display: flex;
+     margin-top: 40px;
+ }
+
+ .PlayButton-module__playIcon___bd0jC {
+     color: white !important;
+     width: 60px;
+     justify-content: center;
+     align-items: center;
+ }
+
+ .middlecontent_content_delivered_text_icon {
+     justify-content: start;
+     width: 60px;
+     background-color: #009de0;
+     border-radius: 50%;
+     margin-left: 99px;
+     padding-left: 1px;
+     display: flex;
+     cursor: pointer;
+ }
+
+ .middlecontent_content_delivered_text span {
+     justify-content: end;
+     color: #009de0;
+     margin-top: auto;
+     margin-bottom: auto;
+     margin-left: 30px;
+     font-size: 20px;
+ }
+
+ .middlecontent_content_delivered_text_icon:hover {
+     border: 1px solid #009de0;
+ }
