--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -88,3 +88,25 @@
  .middlecontent_content_delivered_text_icon:hover {
      border: 1px solid #009de0;
  }
+
+ .middledown_p {
+     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+     font-size: 30px;
+     text-align: center;
+     padding-top: 110px;
+     color: rgb(32, 33, 37);
+     margin-bottom: 0;
+
+ }
+
+ .middledown_p2 {
+     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+     font-size: 30px;
+     text-align: center;
+     width: 62%;
+     color: rgb(32, 33, 37);
+     margin-left: 280px;
+     margin-top: 0px;
+
+
+ }
