--- a/css/aboutstyle.css
+++ b/css/aboutstyle.css
@@ -426,6 +426,10 @@
     color: white;
     text-decoration: none;
     cursor: pointer;
+    margin-top: 60px;
+    margin-left: auto;
+    margin-right: auto;
+    display: inline-block;
     padding: 15px 20px;
     font-weight: 700;
     font-size: 20px;
